--- a/src/translator/languages/_english.xml
+++ b/src/translator/languages/_english.xml
@@ -6,6 +6,10 @@
 
         <item name="title">Advanced science calculator</item>
         <item name="no_java">There is no Java in your computer. Please, install it in version at least 8.</item>
+        <item name="SETTING">Setting</item>
+        <item name="USERS">Users</item>
+        <item name="VARIABLES">Variables</item>
+        <item name="FUNCTIONS">Functions</item>
 
     </department>
 
