Add Design Pattern && reflection

--- a/src/translator/languages/_english.xml
+++ b/src/translator/languages/_english.xml
@@ -19,4 +19,8 @@
 
     </department>
 
+    <department name="cli">
+        <item name="ERROR_ARGUMENTS">Error command line arguments</item>
+    </department>
+
 </translate>
