Add saving permanent data

--- a/src/translator/languages/czech.xml
+++ b/src/translator/languages/czech.xml
@@ -12,7 +12,7 @@
         <item name="LANGUAGE">Jazyk</item>
         <item name="EXPAND_VARIABLES">Expandovat proměnné</item>
         <item name="EXPAND_FUNCTIONS">Expandovat funkce</item>
-        <item name="SAVE">Uložit</item>
+        <item name="SAVE">Budiž</item>
         <item name="HELP">Nápověda</item>
         <item name="USERS">Uživatelé</item>
         <item name="CLOSE">Zavřít</item>
