Fix coding in translator

--- a/languages/_english.xml
+++ b/languages/_english.xml
@@ -12,7 +12,7 @@
         <item name="LANGUAGE">Language</item>
         <item name="EXPAND_VARIABLES">Expand variables</item>
         <item name="EXPAND_FUNCTIONS">Expand functions</item>
-        <item name="SAVE">Budiž</item>
+        <item name="SAVE">Good</item>
         <item name="HELP">Help</item>
         <item name="USERS">Users</item>
         <item name="CLOSE">Close</item>
