--- a/doc/dokumentace.tex
+++ b/doc/dokumentace.tex
@@ -53,7 +53,8 @@
 		Odinstalace probíhá spuštěním souboru \texttt{unist000.exe}
 
 		\item Linux je pouze sekundární platformou, a proto obsahuje pouze jednoduchý instlační script \texttt{install.sh}
-		pro zkopírování souborů do složky \texttt{/usr/local/lib} a vytvoření souštěče v \texttt{/usr/local/bin}
+		pro zkopírování souborů do složky \texttt{/usr/local/lib} a vytvoření souštěče v \texttt{/usr/local/bin}.
+		Aplikaci je poté možné spustit zadáním my\_007\_calculator do příkazové řádky.
 		V případě, že je script spuštěn s parametrem \textt{-d}, tak se script pokusí vytvořit spustitelného
 		zástupce na ploše. Pokud není plocha dostupná, nestane se nic.
 		Odinstalace probíhá spuštěním scriptu \texttt{unistall.sh}, který snaže vytvořneé soubory. Ruční odinstalace je možná
